<resources>
    <string name="app_name">Brain Injury</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strategies_title">The Brain Injury Strategies App is intended to provide ideas for supporting an individual who is returning to learning.</string>
    <string-array name="strategies">
        <item>-A concussion is a type of traumatic brain injury</item>
        <item>-It takes a child/adolescent an average of 7 to 21 days to recover fully from a concussion</item>
        <item>-Because of risk of further brain damage, the most important and most immediate action 
            following a concussion is to reduce PHYSICAL, BEHAVIORAL and MENTAL activity </item>
    </string-array>
    <string-array name="subs">
        <item>-A concussion is a type of traumatic brain injury</item>
        <item>-It takes a child/adolescent an average of 7 to 21 days to recover fully from a concussion</item>
        <item>-Because of risk of further brain damage, the most important and most immediate action 
            following a concussion is to reduce PHYSICAL, BEHAVIORAL and MENTAL activity </item>
    </string-array>
    <string name="title_activity_area_of_concern">AreaOfConcern</string>
    <string name="fatigueinfo"><item>The Student may:\n
        \t-Tire Quickly (physically and/or mentally)\n
        \t-Have reduced tolerance and ability to cope </item></string>
    <string name="sensoryinfo"><item>The Student may have:\n
        \t* Light Sensitivity:\n
        \t\t -Double vision or blurry vision\n
        \t\t -Difficulty reading and copying and/or paying attention\n\t\t to visual tasks.\n
        \t* Noise Sensitivity:\n
        \t\t-Difficulty coping with noise level  in variety of school\n\t\t settings \n
        \t\t (hallways, lunchroom, music classes, \n\t\t shop classes, physical education).\n
        \t* Motor symptoms\n
        \t\t - Dizziness/lightheadedness, which can make standing\n\t\t or walking in crowds challenging\n
        \t\t- Difficulties with fine motor tasks\n\t\t (writing, using scissors, drawing)  </item></string>
    <string name="attentioninfo"><item>The Student may:\n
        \t-Appear not to listen\n
        \t-Miss details\n
        \t-Forget what people have said\n
        \t-Have difficulties concentrating\n
        \t-Be unable to cope with more than one thing at a time\n
        \t-Be easily distracted\n 
        \t-Change the subject often\n
        \t-Get bored easily\n </item></string>
    <string name="selfmonitoringinfo"><item>The Student may:\n
        \t-Show poor adherence to rules\n
        \t-Not realize they have made errors\n
        \t-\'Hog\' conversations ; be verbose and keep talking\n
        \t  when others are no longer interested\n
        \t-Have lower tolerance for frustating situations\n  </item></string>
    <string name="receptiveinfo"><item>The Student may:\n
        \t-Have difficulty understanding\n
        \t-Non verbal communication /body language ;  \n
        \t-Take statements literally\n</item></string>
    <string name="expressiveinfo"><item>The Student may:\n
        \t-Have difficulty initiating\n
        \t\tand maintaining conversation (participation)  \n</item></string>
    <string name="speedinfo"><item>The Student may:\n
        \t-Take Longer to complete tasks\n
        \t-Take longer to answer questions\n
        \t-Be unable to keep track of lengthy conversations\n</item></string>
    <string name="planninginfo"><item>The Student may:\n
        \t-Have difficulty preparing for a task\n
        \t-Be unable to work out the steps involved in a task\n
        \t-Have problem with organizing their own thoughts\n
        \t and explaining things to others</item></string>
    <string name="memoryinfo"><item>The Student may:\n
        \t-Have difficulty learning new things\n
        \t-Be forgetful \n
        \t-Lose things\n
        \t-Have difficulty recalling what they\'ve learned</item></string>
    <string name="reasoninginfo"><item>The Student may:\n
        \t-Have rigid and concrete thinking style;\n
        \t take statements literally\n
        \t-Be resistant to change\n
        \t-Have a simplistic understanding of emotions\n
        \t-Show poor judgment and poor decision making skills</item></string>
    <string name="problemsolvinginfo"><item>The Student may:\n
        \t-Have difficulty working out solutions to the problem\n
        \t-Be unable to generate new ideas\n
        \t-Have disordered approach to problem solving\n</item></string>
    <string name="choosetext"><item> Choose area of concern(s): </item></string>
    <string name="longpress"><item> Press and hold \t  </item></string>
    <string name="longpressinfo"><item> \t to learn more about symptoms</item></string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_strategies">Strategies</string>
    <string-array name="fatiguestrategies">
        <item>Consider focusing on core/priority subjects \n\t(Math, Science, History and English)</item>
        <item>Consider shortening the school day</item>
        <item> Encourage person to take breaks</item>
    </string-array>
    <string-array name="fatiguesubstrategies00">
        <item>Schedule more demanding or essential tasks when student is at his/her best</item>
        <item>Shorten, reduce or break down assignments into smaller manageable chunks that the student can complete without 
            getting frustrated or having symptoms worsen</item>
        <item> Assign a note taker</item>
        <item>Allow student to record lectures</item>
        <item>Provide lecture notes/PowerPoint slides or teacher tapes lectures/discussions for student to replay later</item>
    </string-array>
    <string-array name="fatiguesubstrategies01">
        <item>Have student arrive at school later or leave earlier, depending on when the student is the best able to handle academic work</item>
    </string-array>
    <string-array name="fatiguesubstrategies02">
        <item>Break time means resting the brain and the body. Breaks can be at regular intervals or as needed.</item>
        <item>Breaks may be needed during classes, tests and/or homework assignments</item>
        <item>Predetermined where a student can rest with supervision (clinic, library, guidance counselor\'s office, or school\'s main office). </item>
    </string-array>
    <string-array name="fatiguesubstrategiesarray">
        <item>@array/fatiguesubstrategies00</item>
        <item>@array/fatiguesubstrategies01</item>
        <item>@array/fatiguesubstrategies02</item>
    </string-array>
    <string-array name="sensorystrategies">
        <item>Restrict visual stimuli</item>
        <item>Address physical issues</item>
        <item>Reduce noise</item>
    </string-array>
    <string-array name="sensorysub0">
        <item>Allow student to wear sunglasses or hat in school</item>
        <item>Sit away from bright sunlight, dim lights or close the blinds</item>
        <item>Warn student if lights will be turned on/off during class</item>
        <item>Reduce exposure or brightness on screens (computers, tablets, Smart boards)</item>
        <item>Consider using audio books</item>
    </string-array>
    <string-array name="sensorysub1">
        <item>Allow student to leave class early to transition to next class before the halls are crowded</item>
        <item>Encourage student to walk with a peer</item>
        <item>Allow student to use the elevator, if available</item>
        <item>Limit or avoid gym, recess, athletics</item>
        <item>Consider reducing paper / pencil tasks or allow extra time for tasks requiring fine motor skills</item>
        <item>Allow student to record or type assignments</item>
    </string-array>
    <string-array name="sensorysub2">
        <item>Allow student to have lunch in a quiet area with a classmate</item>
        <item>Encourage student to sit away from talkative peers, open windows or school intercoms.</item>
        <item>Limit or avoid band, choir, physical education or shop class</item>
        <item>Allow students to avoid loud events (pep rallies, athletic events, dances, assemblies)</item>
        <item>Allow student to leave class early to transition to next class before the halls are crowded</item>
        <item>Consider the use of earplugs</item>
        <item>Alert student when there is going to be a tornado or fire drill</item>
    </string-array>
    <string-array name="sensorysubsarray">
        <item>@array/sensorysub0</item>
        <item>@array/sensorysub1</item>
        <item>@array/sensorysub2</item>
    </string-array>
    <string name="hospitallink"><item><a href="http://rockymountainhospitalforchildren.com/service/concussion-management-reap-guidelines">http://rockymountainhospitalforchildren.com/service/concussion-management-reap-guidelines</a></item></string>
    <string name="startheader"><item>              The Brain Injury Strategies App is intended to provide ideas for \n
              supporting an individual who is returning to learning.</item></string>
    <string name="startstrategies"><item>\n- A concussion is a type of traumatic brain injury\n
              
              - It takes a child/adolescent an average of 7 to 21 days \n
                 \t to fully recover from a concussion.\n
              -Because of the risk of further brain damage, the most\n
               \t important and most immediate action following a concussion is to\n
                 \t reduce PHYSICAL, BEHAVIORAL and MENTAL activity.</item></string>
    <string name="startfooter"><item>             Sources: Rockingham County Public Schools: Report to Teachers, REAP Concussion Management Program\n
             at Rocky Mountain Hospital for Children-</item></string>
    <string name="about_description">The Brain Injury Strategies App is intended to provide ideas for supporting an individual who is returning to learning. It addresses various areas of concern that can happen after a concussion, a type of traumatic brain injury. The end product is a summary of selected strategies that can be implemented by an educator for an individual student.</string>
    <string name="about_resources">Brain Injury in Children and Youth: A Manual for Educators- Colorado Department of Education \n https://ttaconline.org/Resource/JWHaEa5BS77rfTzXQh91PQ/Resource-brain-injury-in-children-and-youth-a-manual-for-educators-2013-colorado-department-of-education \n\n Proactive Concussion Recovery Toolkit- George Mason University\nhttp://concussiontoolkit.gmu.edu/assets/concussion/instructional-strategies.pdf\n\nWorking with individuals with Brain Injury: A Professional\'s Guide\nhttp://www.biav.net/brain-injury-children.htm</string>
    <string name="about_developed">Kellar Institute for Human disAbilities\nCollege of Education and Human Development\nGeorge Mason University\n4400 University Drive, MS1F2\n Fairfax, Virginia 22030\nEmail:support@atwaresolutions.com\nURL:http://atwaresolutions.com</string>
    <string name="about_credits">Lynn Wiley, Kristine Ganley, Clare Talbert, Boris Gafurov,\nSoojin Jang (Design), Paul Yang (Graphics)</string>
    <string name="about_developers">Animesh Jain</string>
    <string name="about_support">ATware Solutions LLC</string>
</resources>